feat: update swagger docs and fix sort order
